internal/mygo/parser/y.output

state 0
	$accept: .file $end 
	opt_package: .    (3)

	PACKAGE  shift 4
	.  reduce 3 (src line 83)

	file  goto 1
	program  goto 2
	opt_package  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  program.    (1)

	.  reduce 1 (src line 67)


state 3
	program:  opt_package.opt_newlines decl_list opt_newlines 
	opt_newlines: .    (5)

	.  reduce 5 (src line 93)

	opt_newlines  goto 5

state 4
	opt_package:  PACKAGE.IDENT 

	IDENT  shift 6
	.  error


5: shift/reduce conflict (shift 8(0), red'n 7(0)) on NEWLINE
state 5
	program:  opt_package opt_newlines.decl_list opt_newlines 
	opt_newlines:  opt_newlines.NEWLINE 
	decl_list: .    (7)

	NEWLINE  shift 8
	.  reduce 7 (src line 98)

	decl_list  goto 7

state 6
	opt_package:  PACKAGE IDENT.    (4)

	.  reduce 4 (src line 85)


state 7
	program:  opt_package opt_newlines decl_list.opt_newlines 
	decl_list:  decl_list.opt_newlines decl 
	opt_newlines: .    (5)

	.  reduce 5 (src line 93)

	opt_newlines  goto 9

state 8
	opt_newlines:  opt_newlines NEWLINE.    (6)

	.  reduce 6 (src line 95)


state 9
	program:  opt_package opt_newlines decl_list opt_newlines.    (2)
	opt_newlines:  opt_newlines.NEWLINE 
	decl_list:  decl_list opt_newlines.decl 

	IMPORT  shift 19
	ENUM  shift 20
	STRUCT  shift 21
	INTERFACE  shift 22
	IMPL  shift 23
	FUNC  shift 24
	LET  shift 25
	VAR  shift 26
	NEWLINE  shift 8
	.  reduce 2 (src line 79)

	decl  goto 10
	import_decl  goto 11
	enum_decl  goto 12
	struct_decl  goto 13
	interface_decl  goto 14
	impl_decl  goto 15
	func_decl  goto 16
	let_decl  goto 17
	var_decl  goto 18

state 10
	decl_list:  decl_list opt_newlines decl.    (8)

	.  reduce 8 (src line 100)


state 11
	decl:  import_decl.    (9)

	.  reduce 9 (src line 103)


state 12
	decl:  enum_decl.    (10)

	.  reduce 10 (src line 105)


state 13
	decl:  struct_decl.    (11)

	.  reduce 11 (src line 106)


state 14
	decl:  interface_decl.    (12)

	.  reduce 12 (src line 107)


state 15
	decl:  impl_decl.    (13)

	.  reduce 13 (src line 108)


state 16
	decl:  func_decl.    (14)

	.  reduce 14 (src line 109)


state 17
	decl:  let_decl.    (15)

	.  reduce 15 (src line 110)


state 18
	decl:  var_decl.    (16)

	.  reduce 16 (src line 111)


state 19
	import_decl:  IMPORT.IDENT STRING 
	import_decl:  IMPORT.STRING 

	IDENT  shift 27
	STRING  shift 28
	.  error


state 20
	enum_decl:  ENUM.qualified_name $$19 opt_type_params $$20 enum_body opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 29

state 21
	struct_decl:  STRUCT.qualified_name $$29 opt_type_params $$30 opt_newlines struct_body opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 31

state 22
	interface_decl:  INTERFACE.qualified_name $$39 opt_type_params $$40 func_sig_list opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 32

state 23
	impl_decl:  IMPL.$$46 opt_impl_type_params type $$47 COLON type $$48 impl_body opt_newlines END 
	$$46: .    (46)

	.  reduce 46 (src line 344)

	$$46  goto 33

state 24
	func_decl:  FUNC.IDENT $$57 opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_using_clause opt_newlines block_expr opt_newlines END 

	IDENT  shift 34
	.  error


state 25
	let_decl:  LET.IDENT opt_type_annot '=' expr 

	IDENT  shift 35
	.  error


state 26
	var_decl:  VAR.IDENT opt_type_annot '=' expr 

	IDENT  shift 36
	.  error


state 27
	import_decl:  IMPORT IDENT.STRING 

	STRING  shift 37
	.  error


state 28
	import_decl:  IMPORT STRING.    (18)

	.  reduce 18 (src line 124)


state 29
	enum_decl:  ENUM qualified_name.$$19 opt_type_params $$20 enum_body opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	$$19: .    (19)

	DOT  shift 39
	.  reduce 19 (src line 134)

	$$19  goto 38

state 30
	qualified_name:  IDENT.    (88)

	.  reduce 88 (src line 611)


state 31
	struct_decl:  STRUCT qualified_name.$$29 opt_type_params $$30 opt_newlines struct_body opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	$$29: .    (29)

	DOT  shift 39
	.  reduce 29 (src line 212)

	$$29  goto 40

state 32
	interface_decl:  INTERFACE qualified_name.$$39 opt_type_params $$40 func_sig_list opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	$$39: .    (39)

	DOT  shift 39
	.  reduce 39 (src line 290)

	$$39  goto 41

state 33
	impl_decl:  IMPL $$46.opt_impl_type_params type $$47 COLON type $$48 impl_body opt_newlines END 
	opt_impl_type_params: .    (50)

	LBRACK  shift 43
	TYPELBRACK  shift 44
	.  reduce 50 (src line 388)

	opt_impl_type_params  goto 42

state 34
	func_decl:  FUNC IDENT.$$57 opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_using_clause opt_newlines block_expr opt_newlines END 
	$$57: .    (57)

	.  reduce 57 (src line 415)

	$$57  goto 45

state 35
	let_decl:  LET IDENT.opt_type_annot '=' expr 
	opt_type_annot: .    (61)

	COLON  shift 47
	.  reduce 61 (src line 479)

	opt_type_annot  goto 46

state 36
	var_decl:  VAR IDENT.opt_type_annot '=' expr 
	opt_type_annot: .    (61)

	COLON  shift 47
	.  reduce 61 (src line 479)

	opt_type_annot  goto 48

state 37
	import_decl:  IMPORT IDENT STRING.    (17)

	.  reduce 17 (src line 114)


state 38
	enum_decl:  ENUM qualified_name $$19.opt_type_params $$20 enum_body opt_newlines END 
	opt_type_params: .    (71)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 71 (src line 518)

	opt_type_params  goto 49

state 39
	qualified_name:  qualified_name DOT.IDENT 

	IDENT  shift 52
	.  error


state 40
	struct_decl:  STRUCT qualified_name $$29.opt_type_params $$30 opt_newlines struct_body opt_newlines END 
	opt_type_params: .    (71)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 71 (src line 518)

	opt_type_params  goto 53

state 41
	interface_decl:  INTERFACE qualified_name $$39.opt_type_params $$40 func_sig_list opt_newlines END 
	opt_type_params: .    (71)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 71 (src line 518)

	opt_type_params  goto 54

state 42
	impl_decl:  IMPL $$46 opt_impl_type_params.type $$47 COLON type $$48 impl_body opt_newlines END 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 55
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 43
	opt_impl_type_params:  LBRACK.$$51 maybe_name_list RBRACK 
	$$51: .    (51)

	.  reduce 51 (src line 390)

	$$51  goto 62

state 44
	opt_impl_type_params:  TYPELBRACK.$$53 maybe_name_list RBRACK 
	$$53: .    (53)

	.  reduce 53 (src line 399)

	$$53  goto 63

state 45
	func_decl:  FUNC IDENT $$57.opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_using_clause opt_newlines block_expr opt_newlines END 
	opt_type_params: .    (71)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 71 (src line 518)

	opt_type_params  goto 64

state 46
	let_decl:  LET IDENT opt_type_annot.'=' expr 

	'='  shift 65
	.  error


state 47
	opt_type_annot:  COLON.type 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 66
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 48
	var_decl:  VAR IDENT opt_type_annot.'=' expr 

	'='  shift 67
	.  error


state 49
	enum_decl:  ENUM qualified_name $$19 opt_type_params.$$20 enum_body opt_newlines END 
	$$20: .    (20)

	.  reduce 20 (src line 139)

	$$20  goto 68

state 50
	opt_type_params:  LBRACK.    (72)

	.  reduce 72 (src line 520)


state 51
	opt_type_params:  TYPELBRACK.$$73 maybe_name_list RBRACK 
	$$73: .    (73)

	.  reduce 73 (src line 524)

	$$73  goto 69

state 52
	qualified_name:  qualified_name DOT IDENT.    (89)

	.  reduce 89 (src line 619)


state 53
	struct_decl:  STRUCT qualified_name $$29 opt_type_params.$$30 opt_newlines struct_body opt_newlines END 
	$$30: .    (30)

	.  reduce 30 (src line 217)

	$$30  goto 70

state 54
	interface_decl:  INTERFACE qualified_name $$39 opt_type_params.$$40 func_sig_list opt_newlines END 
	$$40: .    (40)

	.  reduce 40 (src line 295)

	$$40  goto 71

state 55
	impl_decl:  IMPL $$46 opt_impl_type_params type.$$47 COLON type $$48 impl_body opt_newlines END 
	$$47: .    (47)

	.  reduce 47 (src line 350)

	$$47  goto 72

state 56
	type:  func_type.    (90)

	.  reduce 90 (src line 626)


state 57
	type:  grouped_type.    (91)

	.  reduce 91 (src line 631)


state 58
	type:  named_type.    (92)

	.  reduce 92 (src line 635)


state 59
	func_type:  FUNC.LPAREN maybe_type_list RPAREN ARROW type 

	LPAREN  shift 73
	.  error


state 60
	grouped_type:  LPAREN.type RPAREN 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 74
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 61
	qualified_name:  qualified_name.DOT IDENT 
	named_type:  qualified_name.named_type_suffix 
	named_type_suffix: .    (96)

	DOT  shift 39
	TYPELBRACK  shift 76
	.  reduce 96 (src line 661)

	named_type_suffix  goto 75

state 62
	opt_impl_type_params:  LBRACK $$51.maybe_name_list RBRACK 
	maybe_name_list: .    (75)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 75 (src line 531)

	qualified_name  goto 61
	type  goto 79
	maybe_name_list  goto 77
	name_list  goto 78
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 63
	opt_impl_type_params:  TYPELBRACK $$53.maybe_name_list RBRACK 
	maybe_name_list: .    (75)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 75 (src line 531)

	qualified_name  goto 61
	type  goto 79
	maybe_name_list  goto 80
	name_list  goto 78
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 64
	func_decl:  FUNC IDENT $$57 opt_type_params.LPAREN maybe_param_list RPAREN ARROW type opt_using_clause opt_newlines block_expr opt_newlines END 

	LPAREN  shift 81
	.  error


state 65
	let_decl:  LET IDENT opt_type_annot '='.expr 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	expr  goto 82
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 66
	opt_type_annot:  COLON type.    (62)

	.  reduce 62 (src line 481)


state 67
	var_decl:  VAR IDENT opt_type_annot '='.expr 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	expr  goto 110
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 68
	enum_decl:  ENUM qualified_name $$19 opt_type_params $$20.enum_body opt_newlines END 
	enum_body: .    (22)

	.  reduce 22 (src line 158)

	enum_body  goto 111

state 69
	opt_type_params:  TYPELBRACK $$73.maybe_name_list RBRACK 
	maybe_name_list: .    (75)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 75 (src line 531)

	qualified_name  goto 61
	type  goto 79
	maybe_name_list  goto 112
	name_list  goto 78
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 70
	struct_decl:  STRUCT qualified_name $$29 opt_type_params $$30.opt_newlines struct_body opt_newlines END 
	opt_newlines: .    (5)

	.  reduce 5 (src line 93)

	opt_newlines  goto 113

state 71
	interface_decl:  INTERFACE qualified_name $$39 opt_type_params $$40.func_sig_list opt_newlines END 
	func_sig_list: .    (42)

	.  reduce 42 (src line 314)

	func_sig_list  goto 114

state 72
	impl_decl:  IMPL $$46 opt_impl_type_params type $$47.COLON type $$48 impl_body opt_newlines END 

	COLON  shift 115
	.  error


state 73
	func_type:  FUNC LPAREN.maybe_type_list RPAREN ARROW type 
	maybe_type_list: .    (84)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 84 (src line 589)

	qualified_name  goto 61
	type  goto 118
	maybe_type_list  goto 116
	type_list  goto 117
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 74
	grouped_type:  LPAREN type.RPAREN 

	RPAREN  shift 119
	.  error


state 75
	named_type:  qualified_name named_type_suffix.    (95)

	.  reduce 95 (src line 657)


state 76
	named_type_suffix:  TYPELBRACK.$$97 maybe_type_list RBRACK 
	$$97: .    (97)

	.  reduce 97 (src line 670)

	$$97  goto 120

state 77
	opt_impl_type_params:  LBRACK $$51 maybe_name_list.RBRACK 

	RBRACK  shift 121
	.  error


state 78
	maybe_name_list:  name_list.    (76)
	name_list:  name_list.COMMA type 

	COMMA  shift 122
	.  reduce 76 (src line 533)


state 79
	name_list:  type.    (77)

	.  reduce 77 (src line 536)


state 80
	opt_impl_type_params:  TYPELBRACK $$53 maybe_name_list.RBRACK 

	RBRACK  shift 123
	.  error


state 81
	func_decl:  FUNC IDENT $$57 opt_type_params LPAREN.maybe_param_list RPAREN ARROW type opt_using_clause opt_newlines block_expr opt_newlines END 
	maybe_param_list: .    (79)

	IDENT  shift 127
	.  reduce 79 (src line 567)

	maybe_param_list  goto 124
	param_list  goto 125
	param  goto 126

state 82
	let_decl:  LET IDENT opt_type_annot '=' expr.    (59)

	.  reduce 59 (src line 452)


83: shift/reduce conflict (shift 128(1), red'n 99(0)) on PIPEFWD
83: shift/reduce conflict (shift 129(1), red'n 99(0)) on PIPEBACK
state 83
	expr:  pipe_expr.    (99)
	pipe_expr:  pipe_expr.PIPEFWD $$101 or_expr 
	pipe_expr:  pipe_expr.PIPEBACK $$103 or_expr 

	PIPEFWD  shift 128
	PIPEBACK  shift 129
	.  reduce 99 (src line 700)


84: shift/reduce conflict (shift 130(2), red'n 100(0)) on OROR
state 84
	pipe_expr:  or_expr.    (100)
	or_expr:  or_expr.OROR and_expr 

	OROR  shift 130
	.  reduce 100 (src line 704)


85: shift/reduce conflict (shift 131(3), red'n 105(0)) on ANDAND
state 85
	or_expr:  and_expr.    (105)
	and_expr:  and_expr.ANDAND compare_expr 

	ANDAND  shift 131
	.  reduce 105 (src line 728)


86: shift/reduce conflict (shift 132(4), red'n 107(0)) on EQEQ
86: shift/reduce conflict (shift 133(4), red'n 107(0)) on NEQ
86: shift/reduce conflict (shift 134(4), red'n 107(0)) on LTE
86: shift/reduce conflict (shift 135(4), red'n 107(0)) on GTE
86: shift/reduce conflict (shift 136(4), red'n 107(0)) on '<'
86: shift/reduce conflict (shift 137(4), red'n 107(0)) on '>'
state 86
	and_expr:  compare_expr.    (107)
	compare_expr:  compare_expr.EQEQ add_expr 
	compare_expr:  compare_expr.NEQ add_expr 
	compare_expr:  compare_expr.LTE add_expr 
	compare_expr:  compare_expr.GTE add_expr 
	compare_expr:  compare_expr.'<' add_expr 
	compare_expr:  compare_expr.'>' add_expr 

	EQEQ  shift 132
	NEQ  shift 133
	LTE  shift 134
	GTE  shift 135
	'<'  shift 136
	'>'  shift 137
	.  reduce 107 (src line 740)


87: shift/reduce conflict (shift 138(5), red'n 109(0)) on '+'
87: shift/reduce conflict (shift 139(5), red'n 109(0)) on '-'
state 87
	compare_expr:  add_expr.    (109)
	add_expr:  add_expr.'+' mul_expr 
	add_expr:  add_expr.'-' mul_expr 

	'+'  shift 138
	'-'  shift 139
	.  reduce 109 (src line 752)


88: shift/reduce conflict (shift 140(6), red'n 116(0)) on '*'
88: shift/reduce conflict (shift 141(6), red'n 116(0)) on '/'
state 88
	add_expr:  mul_expr.    (116)
	mul_expr:  mul_expr.'*' prefix_expr 
	mul_expr:  mul_expr.'/' prefix_expr 

	'*'  shift 140
	'/'  shift 141
	.  reduce 116 (src line 789)


state 89
	mul_expr:  prefix_expr.    (119)

	.  reduce 119 (src line 806)


90: shift/reduce conflict (shift 143(0), red'n 122(8)) on DOT
90: shift/reduce conflict (shift 142(0), red'n 122(8)) on LPAREN
90: shift/reduce conflict (shift 145(0), red'n 122(8)) on LBRACK
90: shift/reduce conflict (shift 146(0), red'n 122(8)) on LBRACE
90: shift/reduce conflict (shift 144(0), red'n 122(8)) on TYPELBRACK
state 90
	prefix_expr:  postfix_expr.    (122)
	postfix_expr:  postfix_expr.LPAREN maybe_expr_list RPAREN 
	postfix_expr:  postfix_expr.DOT IDENT 
	postfix_expr:  postfix_expr.TYPELBRACK maybe_type_list RBRACK LBRACE maybe_struct_fields RBRACE 
	postfix_expr:  postfix_expr.LBRACK $$128 maybe_type_list RBRACK LBRACE maybe_struct_fields RBRACE 
	postfix_expr:  postfix_expr.LBRACE maybe_struct_fields RBRACE 

	DOT  shift 143
	LPAREN  shift 142
	LBRACK  shift 145
	LBRACE  shift 146
	TYPELBRACK  shift 144
	.  reduce 122 (src line 823)


state 91
	prefix_expr:  NOT.postfix_expr 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	postfix_expr  goto 147
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 92
	postfix_expr:  primary.    (124)

	.  reduce 124 (src line 831)


state 93
	primary:  IDENT.    (131)

	.  reduce 131 (src line 875)


state 94
	primary:  NUMBER.    (132)

	.  reduce 132 (src line 880)


state 95
	primary:  STRING.    (133)

	.  reduce 133 (src line 884)


state 96
	primary:  LPAREN.expr RPAREN 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	expr  goto 148
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 97
	primary:  slice_lit.    (135)

	.  reduce 135 (src line 889)


state 98
	primary:  collection_lit.    (136)

	.  reduce 136 (src line 890)


state 99
	primary:  if_expr.    (137)

	.  reduce 137 (src line 891)


state 100
	primary:  switch_expr.    (138)

	.  reduce 138 (src line 892)


state 101
	primary:  while_expr.    (139)

	.  reduce 139 (src line 893)


state 102
	primary:  func_lit.    (140)

	.  reduce 140 (src line 894)


state 103
	slice_lit:  SLICE.    (141)

	.  reduce 141 (src line 897)


state 104
	slice_lit:  LBRACK.maybe_expr_list RBRACK 
	maybe_expr_list: .    (143)

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  reduce 143 (src line 910)

	expr  goto 151
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	maybe_expr_list  goto 149
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102
	expr_list  goto 150

state 105
	collection_lit:  LBRACE.maybe_collection_entries RBRACE 
	maybe_collection_entries: .    (154)

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  reduce 154 (src line 972)

	expr  goto 155
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102
	maybe_collection_entries  goto 152
	collection_entries  goto 153
	collection_entry  goto 154

state 106
	if_expr:  IF.expr $$161 THEN expr $$162 ELSE expr 
	if_expr:  IF.expr NEWLINE $$164 opt_newlines block_expr $$165 ELSE opt_newlines block_expr opt_newlines END 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	expr  goto 156
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 107
	switch_expr:  SWITCH.expr $$169 opt_newlines switch_case_list opt_newlines END 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	expr  goto 157
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 108
	while_expr:  WHILE.expr $$167 opt_newlines block_expr opt_newlines END 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	expr  goto 158
	pipe_expr  goto 83
	or_expr  goto 84
	and_expr  goto 85
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 109
	func_lit:  FUNC.LPAREN maybe_param_list RPAREN ARROW type opt_newlines block_expr opt_newlines END 

	LPAREN  shift 159
	.  error


state 110
	var_decl:  VAR IDENT opt_type_annot '=' expr.    (60)

	.  reduce 60 (src line 465)


state 111
	enum_decl:  ENUM qualified_name $$19 opt_type_params $$20 enum_body.opt_newlines END 
	enum_body:  enum_body.opt_newlines enum_variant 
	opt_newlines: .    (5)

	.  reduce 5 (src line 93)

	opt_newlines  goto 160

state 112
	opt_type_params:  TYPELBRACK $$73 maybe_name_list.RBRACK 

	RBRACK  shift 161
	.  error


113: shift/reduce conflict (shift 8(0), red'n 35(0)) on NEWLINE
state 113
	opt_newlines:  opt_newlines.NEWLINE 
	struct_decl:  STRUCT qualified_name $$29 opt_type_params $$30 opt_newlines.struct_body opt_newlines END 
	struct_fields: .    (35)

	NEWLINE  shift 8
	LPAREN  shift 163
	.  reduce 35 (src line 260)

	struct_body  goto 162
	struct_fields  goto 164

state 114
	interface_decl:  INTERFACE qualified_name $$39 opt_type_params $$40 func_sig_list.opt_newlines END 
	func_sig_list:  func_sig_list.opt_newlines func_sig 
	opt_newlines: .    (5)

	.  reduce 5 (src line 93)

	opt_newlines  goto 165

state 115
	impl_decl:  IMPL $$46 opt_impl_type_params type $$47 COLON.type $$48 impl_body opt_newlines END 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 166
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 116
	func_type:  FUNC LPAREN maybe_type_list.RPAREN ARROW type 

	RPAREN  shift 167
	.  error


state 117
	maybe_type_list:  type_list.    (85)
	type_list:  type_list.COMMA type 

	COMMA  shift 168
	.  reduce 85 (src line 591)


state 118
	type_list:  type.    (86)

	.  reduce 86 (src line 594)


state 119
	grouped_type:  LPAREN type RPAREN.    (94)

	.  reduce 94 (src line 653)


state 120
	named_type_suffix:  TYPELBRACK $$97.maybe_type_list RBRACK 
	maybe_type_list: .    (84)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 84 (src line 589)

	qualified_name  goto 61
	type  goto 118
	maybe_type_list  goto 169
	type_list  goto 117
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 121
	opt_impl_type_params:  LBRACK $$51 maybe_name_list RBRACK.    (52)

	.  reduce 52 (src line 395)


state 122
	name_list:  name_list COMMA.type 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 170
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 123
	opt_impl_type_params:  TYPELBRACK $$53 maybe_name_list RBRACK.    (54)

	.  reduce 54 (src line 404)


state 124
	func_decl:  FUNC IDENT $$57 opt_type_params LPAREN maybe_param_list.RPAREN ARROW type opt_using_clause opt_newlines block_expr opt_newlines END 

	RPAREN  shift 171
	.  error


state 125
	maybe_param_list:  param_list.    (80)
	param_list:  param_list.COMMA param 

	COMMA  shift 172
	.  reduce 80 (src line 569)


state 126
	param_list:  param.    (81)

	.  reduce 81 (src line 572)


state 127
	param:  IDENT.COLON type 

	COLON  shift 173
	.  error


state 128
	pipe_expr:  pipe_expr PIPEFWD.$$101 or_expr 
	$$101: .    (101)

	.  reduce 101 (src line 710)

	$$101  goto 174

state 129
	pipe_expr:  pipe_expr PIPEBACK.$$103 or_expr 
	$$103: .    (103)

	.  reduce 103 (src line 718)

	$$103  goto 175

state 130
	or_expr:  or_expr OROR.and_expr 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	and_expr  goto 176
	compare_expr  goto 86
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 131
	and_expr:  and_expr ANDAND.compare_expr 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	compare_expr  goto 177
	add_expr  goto 87
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 132
	compare_expr:  compare_expr EQEQ.add_expr 

	IDENT  shift 93
	NUMBER  shift 94
	STRING  shift 95
	FUNC  shift 109
	IF  shift 106
	SWITCH  shift 107
	NOT  shift 91
	WHILE  shift 108
	LPAREN  shift 96
	LBRACK  shift 104
	LBRACE  shift 105
	SLICE  shift 103
	.  error

	add_expr  goto 178
	mul_expr  goto 88
	prefix_expr  goto 89
	postfix_expr  goto 90
	primary  goto 92
	slice_lit  goto 97
	collection_lit  goto 98
	if_expr  goto 99
	switch_expr  goto 100
	while_expr  goto 101
	func_lit  goto 102

state 133
	compare_expr:  compare_expr NEQ.add_expr 
